# se

./: .gitignore  README.md  github用法.txt  工作计划.wps
MG/mg-1.2/: INSTALL.mg  MODIFICATIONS  Makefile.in  README  README.port  about_mg.html  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  sysfuncs.h
MG/mg-1.2/SampleData/: MODIFICATIONS  Makefile  alice13a.txt.Z
MG/mg-1.2/SampleData/bible/: Makefile  genesis.txt.Z  revelation.txt.Z
MG/mg-1.2/SampleData/davinci/: Makefile  canal_excavation.pbm  clark.txt  detolnay.ptm  detolnay.txt  helicopter.pbm  helicopter.txt  monaLisa.pgm  monaLisa.txt  venturi.txt
MG/mg-1.2/docs/: Makefile  README.man  mg.1  mg_invf_dump.changes  mgintro++.1  mgintro.1  mgmerge.README
MG/mg-1.2/lib/: Makefile.in  bitio_gen.c  bitio_gen.h  bitio_m.h  bitio_m_mem.h  bitio_m_mems.h  bitio_m_random.h  bitio_m_stdio.h  bitio_mem.c  bitio_mem.h  bitio_mems.c  bitio_mems.h  bitio_random.c  bitio_random.h  bitio_stdio.c  bitio_stdio.h  error.c  filestats.c  filestats.h  getopt.c  heap.c  heap.h  huffman.c  huffman.h  huffman_mem.c  huffman_mem.h  huffman_stdio.c  huffman_stdio.h  local_strings.c  local_strings.h  memlib.c  memlib.h  messages.c  messages.h  perf_hash.c  perf_hash.h  random.c  random.h  rx.c  sptree.c  (+6 more)
MG/mg-1.2/src/images/: Makefile.in  arithcode.c  arithcode.h  basictypes.h  bilevel.c  bilevel.h  codeoffsets.c  codeoffsets.h  codesyms.c  codesyms.h  extractor.c  extractor.h  felics.c  lstevent.c  marklist.c  marklist.h  match.c  match.h  mgbilevel.1  mgbilevel.c  mgfelics.1  mgfelics.c  mgtic.1  mgtic.c  mgticbuild.1  mgticbuild.c  mgticdump.1  mgticdump.c  mgticprune.1  mgticprune.c  mgticstat.1  mgticstat.c  model.h  pbmtools.c  pbmtools.h  ppm.c  sortmarks.c  sortmarks.h  utils.c  utils.h
MG/mg-1.2/src/scripts/: Makefile.in  mg_get.1  mg_get.sh  mg_get_merge.1  mg_get_merge.sh  mgbuild.1  mgbuild.sh  mgbuild_4.1  mgbuild_4.sh  mgmerge.1  mgmerge.sh  xmg.1  xmg.sh
MG/mg-1.2/src/text/: Makefile.in  backend.c  backend.h  bool_optimiser.c  bool_optimiser.h  bool_parser.c  bool_parser.h  bool_parser.y  bool_query.c  bool_query.h  bool_tester.c  bool_tree.c  bool_tree.h  build.h  commands.c  commands.h  comp_dict.c  comp_dict.h  conditions.h  environment.c  environment.h  globals.h  hash.h  help.mg.h  help.mg.src  invf.h  invf_get.c  invf_get.h  ivf.pass1.c  ivf.pass2.c  lists.c  lists.h  locallib.c  locallib.h  mg.h  mg.special.c  mg_compression_dict.1  mg_compression_dict.c  mg_errors.c  mg_errors.h  (+51 more)
MG/mg-1.2/test/: Makefile  alice.len  alice.sum  mgrc1  mgrc2  mgrc3  q3  r1  r2  r3  simple_sum.c  testmg
crawker-src-download/: C语言写的网页爬虫程序.rar  Web-Crawlers.rar  netspider.rar  用C语言编写一个网络蜘蛛.doc  网络蜘蛛爬行C源代码.doc  网络蜘蛛爬行C源代码_有注释.doc
html-study/: 1.html  2.html  bgcolor.html  (+7 more)
(+15 files in other folders)
